PR Review Updates
- Address init-then-modify comments
  - also delete dependency-reduced-pom from being tracked
- Modify datasource capabilities after considering splittable limitations
  - For connectors with > 1 split, we can't do partial pushdown of limits
    or top n
  - So, remove them from the capabilities, but keep them in the record
    handlers so they can be evaluated at the source, just not removed from
    the query plans
  - Also make FILTER pushdown more granular to account for DDB limitations
- Adding default column for constant expression
- Add default static var for no limit
- Remove unnecessary override now that we are not pushing limits for ddb
- Deleted unneccessary comments and added attribution to standardfunctions
- Move FederationExpressionParser from SDK to athena-jdbc
- Additionally, delete stubs from ElasticSearch for now.
- Rename LIMIT pushdown subtype to INTEGER_CONSTANT
- Reduce scope of catch block for serde incompatibility
- Make all predicate pushdown enhancement changes java8 compliant
- Update supported filter pushdown subtypes for jdbc connectors